// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser: js to xml 1`] = `
"<Keyboard>
  <Name>OptiKey-BoardMaker</Name>
  <Height>40</Height>
  <SymbolMargin>1</SymbolMargin>
  <BorderThickness>0,0,0,0</BorderThickness>
  <DockSize>Full</DockSize>
  <Position>Top</Position>
  <Width>100</Width>
  <HorizontalOffset>0</HorizontalOffset>
  <VerticalOffset>0</VerticalOffset>
  <BackgroundColor>Transparent</BackgroundColor>
  <BorderColor>Transparent</BorderColor>
  <WindowState>Docked</WindowState>
  <Grid>
    <Rows>7</Rows>
    <Cols>12</Cols>
  </Grid>
  <Content>
    <DynamicKey>
      <Row>0</Row>
      <Col>0</Col>
      <Text>~</Text>
      <Label>~</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>0</Row>
      <Col>1</Col>
      <Text>1</Text>
      <Label>1</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>0</Row>
      <Col>2</Col>
      <Text>2</Text>
      <Label>2</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>0</Row>
      <Col>3</Col>
      <Text>3</Text>
      <Label>3</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>0</Row>
      <Col>4</Col>
      <Text>4</Text>
      <Label>4</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>0</Row>
      <Col>5</Col>
      <Text>5</Text>
      <Label>5</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>0</Row>
      <Col>6</Col>
      <Text>6</Text>
      <Label>6</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>0</Row>
      <Col>7</Col>
      <Text>7</Text>
      <Label>7</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>1</Row>
      <Col>0</Col>
      <Text>\\\\</Text>
      <Label>\\\\</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>0</Row>
      <Col>8</Col>
      <Text>8</Text>
      <Label>8</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>1</Row>
      <Col>1</Col>
      <Text>!</Text>
      <Label>!</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>0</Row>
      <Col>9</Col>
      <Text>9</Text>
      <Label>9</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>1</Row>
      <Col>2</Col>
      <Text>?</Text>
      <Label>?</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>0</Row>
      <Col>10</Col>
      <Text>0</Text>
      <Label>0</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>1</Row>
      <Col>3</Col>
      <Text>+</Text>
      <Label>+</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>1</Row>
      <Col>4</Col>
      <Text>*</Text>
      <Label>*</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>0</Row>
      <Col>11</Col>
      <Symbol>MenuIcon</Symbol>
      <Action>MenuKeyboard</Action>
    </DynamicKey>
    <DynamicKey>
      <Row>1</Row>
      <Col>5</Col>
      <Text>%</Text>
      <Label>%</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>1</Row>
      <Col>6</Col>
      <Text>&amp;</Text>
      <Label>&amp;</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>2</Row>
      <Col>0</Col>
      <Text>/</Text>
      <Label>/</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>1</Row>
      <Col>7</Col>
      <Text>\\"</Text>
      <Label>\\"</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>2</Row>
      <Col>1</Col>
      <Text>q</Text>
      <ShiftUpLabel>q</ShiftUpLabel>
      <ShiftDownLabel>Q</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>1</Row>
      <Col>8</Col>
      <Text>'</Text>
      <Label>'</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>2</Row>
      <Col>2</Col>
      <Text>w</Text>
      <ShiftUpLabel>w</ShiftUpLabel>
      <ShiftDownLabel>W</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>1</Row>
      <Col>9</Col>
      <Text>\`</Text>
      <Label>\`</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>1</Row>
      <Col>10</Col>
      <Text>$</Text>
      <Label>$</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>2</Row>
      <Col>3</Col>
      <Text>e</Text>
      <ShiftUpLabel>e</ShiftUpLabel>
      <ShiftDownLabel>E</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>2</Row>
      <Col>4</Col>
      <Text>r</Text>
      <ShiftUpLabel>r</ShiftUpLabel>
      <ShiftDownLabel>R</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>2</Row>
      <Col>5</Col>
      <Text>t</Text>
      <ShiftUpLabel>t</ShiftUpLabel>
      <ShiftDownLabel>T</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>2</Row>
      <Col>6</Col>
      <Text>z</Text>
      <ShiftUpLabel>z</ShiftUpLabel>
      <ShiftDownLabel>Z</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>3</Row>
      <Col>0</Col>
      <Text>-</Text>
      <Label>-</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>2</Row>
      <Col>7</Col>
      <Text>u</Text>
      <ShiftUpLabel>u</ShiftUpLabel>
      <ShiftDownLabel>U</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>3</Row>
      <Col>1</Col>
      <Text>_</Text>
      <Label>_</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>2</Row>
      <Col>8</Col>
      <Text>i</Text>
      <ShiftUpLabel>i</ShiftUpLabel>
      <ShiftDownLabel>I</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>3</Row>
      <Col>2</Col>
      <Text>a</Text>
      <ShiftUpLabel>a</ShiftUpLabel>
      <ShiftDownLabel>A</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>2</Row>
      <Col>9</Col>
      <Text>o</Text>
      <ShiftUpLabel>o</ShiftUpLabel>
      <ShiftDownLabel>O</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>2</Row>
      <Col>10</Col>
      <Text>p</Text>
      <ShiftUpLabel>p</ShiftUpLabel>
      <ShiftDownLabel>P</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>3</Row>
      <Col>3</Col>
      <Text>s</Text>
      <ShiftUpLabel>s</ShiftUpLabel>
      <ShiftDownLabel>S</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>2</Row>
      <Col>11</Col>
      <Text>|</Text>
      <Label>|</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>3</Row>
      <Col>4</Col>
      <Text>d</Text>
      <ShiftUpLabel>d</ShiftUpLabel>
      <ShiftDownLabel>D</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>3</Row>
      <Col>5</Col>
      <Text>f</Text>
      <ShiftUpLabel>f</ShiftUpLabel>
      <ShiftDownLabel>F</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>3</Row>
      <Col>6</Col>
      <Text>g</Text>
      <ShiftUpLabel>g</ShiftUpLabel>
      <ShiftDownLabel>G</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>3</Row>
      <Col>7</Col>
      <Text>h</Text>
      <ShiftUpLabel>h</ShiftUpLabel>
      <ShiftDownLabel>H</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>4</Row>
      <Col>0</Col>
      <Symbol>TabIcon</Symbol>
      <Text>&#9;</Text>
    </DynamicKey>
    <DynamicKey>
      <Row>3</Row>
      <Col>8</Col>
      <Text>j</Text>
      <ShiftUpLabel>j</ShiftUpLabel>
      <ShiftDownLabel>J</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>4</Row>
      <Col>1</Col>
      <Text>&lt;</Text>
      <Label>&lt;</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>3</Row>
      <Col>9</Col>
      <Text>k</Text>
      <ShiftUpLabel>k</ShiftUpLabel>
      <ShiftDownLabel>K</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>4</Row>
      <Col>2</Col>
      <Text>y</Text>
      <ShiftUpLabel>y</ShiftUpLabel>
      <ShiftDownLabel>Y</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>3</Row>
      <Col>10</Col>
      <Text>l</Text>
      <ShiftUpLabel>l</ShiftUpLabel>
      <ShiftDownLabel>L</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>4</Row>
      <Col>3</Col>
      <Text>x</Text>
      <ShiftUpLabel>x</ShiftUpLabel>
      <ShiftDownLabel>X</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>3</Row>
      <Col>11</Col>
      <Text>^</Text>
      <Label>^</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>4</Row>
      <Col>4</Col>
      <Text>c</Text>
      <ShiftUpLabel>c</ShiftUpLabel>
      <ShiftDownLabel>C</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>4</Row>
      <Col>5</Col>
      <Text>v</Text>
      <ShiftUpLabel>v</ShiftUpLabel>
      <ShiftDownLabel>V</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>4</Row>
      <Col>6</Col>
      <Text>b</Text>
      <ShiftUpLabel>b</ShiftUpLabel>
      <ShiftDownLabel>B</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>4</Row>
      <Col>7</Col>
      <Text>n</Text>
      <ShiftUpLabel>n</ShiftUpLabel>
      <ShiftDownLabel>N</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>5</Row>
      <Col>0</Col>
      <Label>Win</Label>
      <Action>LeftWin</Action>
    </DynamicKey>
    <DynamicKey>
      <Row>4</Row>
      <Col>8</Col>
      <Text>m</Text>
      <ShiftUpLabel>m</ShiftUpLabel>
      <ShiftDownLabel>M</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>5</Row>
      <Col>1</Col>
      <Text>&gt;</Text>
      <Label>&gt;</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>4</Row>
      <Col>9</Col>
      <Text>@</Text>
      <Label>@</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>5</Row>
      <Col>2</Col>
      <Text>,</Text>
      <Label>,</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>4</Row>
      <Col>10</Col>
      <Text>=</Text>
      <Label>=</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>5</Row>
      <Col>3</Col>
      <Text>.</Text>
      <Label>.</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>4</Row>
      <Col>11</Col>
      <Text>#</Text>
      <Label>#</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>5</Row>
      <Col>4</Col>
      <Text>(</Text>
      <Label>(</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>5</Row>
      <Col>5</Col>
      <Text>)</Text>
      <Label>)</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>5</Row>
      <Col>6</Col>
      <Text>[</Text>
      <Label>[</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>5</Row>
      <Col>7</Col>
      <Text>]</Text>
      <Label>]</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>6</Row>
      <Col>0</Col>
      <Label>Ctrl</Label>
      <Action>LeftCtrl</Action>
    </DynamicKey>
    <DynamicKey>
      <Row>5</Row>
      <Col>8</Col>
      <Text>{</Text>
      <Label>{</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>6</Row>
      <Col>1</Col>
      <Label>Alt</Label>
      <Action>LeftAlt</Action>
    </DynamicKey>
    <DynamicKey>
      <Row>6</Row>
      <Col>2</Col>
      <Text>;</Text>
      <Label>;</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>5</Row>
      <Col>9</Col>
      <Text>}</Text>
      <Label>}</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>6</Row>
      <Col>3</Col>
      <Text>:</Text>
      <Label>:</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>5</Row>
      <Col>10</Col>
      <Symbol>UpArrowKeyIcon</Symbol>
      <Action>ArrowUp</Action>
    </DynamicKey>
    <DynamicKey>
      <Row>5</Row>
      <Col>11</Col>
      <Label>Esc</Label>
      <Action>Escape</Action>
    </DynamicKey>
    <DynamicKey>
      <Row>6</Row>
      <Col>4</Col>
      <Symbol>ShiftIcon</Symbol>
      <Action>LeftShift</Action>
    </DynamicKey>
    <DynamicKey>
      <Row>6</Row>
      <Col>5</Col>
      <Width>2</Width>
      <Height>2</Height>
      <Symbol>SpaceIcon</Symbol>
      <Text>&#32;</Text>
    </DynamicKey>
    <DynamicKey>
      <Row>6</Row>
      <Col>7</Col>
      <Symbol>EnterIcon</Symbol>
      <Text>&#13;</Text>
    </DynamicKey>
    <DynamicKey>
      <Row>6</Row>
      <Col>8</Col>
      <Symbol>BackOneIcon</Symbol>
      <Action>BackOne</Action>
    </DynamicKey>
    <DynamicKey>
      <Row>6</Row>
      <Col>9</Col>
      <Symbol>LeftArrowKeyIcon</Symbol>
      <Action>ArrowLeft</Action>
    </DynamicKey>
    <DynamicKey>
      <Row>6</Row>
      <Col>10</Col>
      <Symbol>DownArrowKeyIcon</Symbol>
      <Action>ArrowDown</Action>
    </DynamicKey>
    <DynamicKey>
      <Row>6</Row>
      <Col>11</Col>
      <Symbol>RightArrowKeyIcon</Symbol>
      <Action>ArrowRight</Action>
    </DynamicKey>
  </Content>
</Keyboard>"
`;

exports[`parser: reduced cols 1`] = `
"<Keyboard>
  <Name>OptiKey-BoardMaker</Name>
  <Height>40</Height>
  <SymbolMargin>1</SymbolMargin>
  <BorderThickness>0,0,0,0</BorderThickness>
  <DockSize>Full</DockSize>
  <Position>Top</Position>
  <Width>100</Width>
  <HorizontalOffset>0</HorizontalOffset>
  <VerticalOffset>0</VerticalOffset>
  <BackgroundColor>Transparent</BackgroundColor>
  <BorderColor>Transparent</BorderColor>
  <WindowState>Docked</WindowState>
  <Grid>
    <Rows>5</Rows>
    <Cols>7</Cols>
  </Grid>
  <Content>
    <DynamicKey>
      <Row>0</Row>
      <Col>0</Col>
      <Text>~</Text>
      <Label>~</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>0</Row>
      <Col>1</Col>
      <Text>1</Text>
      <Label>1</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>0</Row>
      <Col>2</Col>
      <Text>2</Text>
      <Label>2</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>0</Row>
      <Col>3</Col>
      <Text>3</Text>
      <Label>3</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>0</Row>
      <Col>4</Col>
      <Text>4</Text>
      <Label>4</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>1</Row>
      <Col>0</Col>
      <Text>\\\\</Text>
      <Label>\\\\</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>0</Row>
      <Col>5</Col>
      <Text>5</Text>
      <Label>5</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>1</Row>
      <Col>1</Col>
      <Text>!</Text>
      <Label>!</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>0</Row>
      <Col>6</Col>
      <Text>6</Text>
      <Label>6</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>1</Row>
      <Col>2</Col>
      <Text>?</Text>
      <Label>?</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>1</Row>
      <Col>3</Col>
      <Text>+</Text>
      <Label>+</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>1</Row>
      <Col>4</Col>
      <Text>*</Text>
      <Label>*</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>2</Row>
      <Col>0</Col>
      <Text>/</Text>
      <Label>/</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>1</Row>
      <Col>5</Col>
      <Text>%</Text>
      <Label>%</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>1</Row>
      <Col>6</Col>
      <Text>&amp;</Text>
      <Label>&amp;</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>2</Row>
      <Col>1</Col>
      <Text>q</Text>
      <ShiftUpLabel>q</ShiftUpLabel>
      <ShiftDownLabel>Q</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>2</Row>
      <Col>2</Col>
      <Text>w</Text>
      <ShiftUpLabel>w</ShiftUpLabel>
      <ShiftDownLabel>W</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>2</Row>
      <Col>3</Col>
      <Text>e</Text>
      <ShiftUpLabel>e</ShiftUpLabel>
      <ShiftDownLabel>E</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>2</Row>
      <Col>4</Col>
      <Text>r</Text>
      <ShiftUpLabel>r</ShiftUpLabel>
      <ShiftDownLabel>R</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>3</Row>
      <Col>0</Col>
      <Text>-</Text>
      <Label>-</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>2</Row>
      <Col>5</Col>
      <Text>t</Text>
      <ShiftUpLabel>t</ShiftUpLabel>
      <ShiftDownLabel>T</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>3</Row>
      <Col>1</Col>
      <Text>_</Text>
      <Label>_</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>2</Row>
      <Col>6</Col>
      <Text>z</Text>
      <ShiftUpLabel>z</ShiftUpLabel>
      <ShiftDownLabel>Z</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>3</Row>
      <Col>2</Col>
      <Text>a</Text>
      <ShiftUpLabel>a</ShiftUpLabel>
      <ShiftDownLabel>A</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>3</Row>
      <Col>3</Col>
      <Text>s</Text>
      <ShiftUpLabel>s</ShiftUpLabel>
      <ShiftDownLabel>S</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>3</Row>
      <Col>4</Col>
      <Text>d</Text>
      <ShiftUpLabel>d</ShiftUpLabel>
      <ShiftDownLabel>D</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>3</Row>
      <Col>5</Col>
      <Text>f</Text>
      <ShiftUpLabel>f</ShiftUpLabel>
      <ShiftDownLabel>F</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>4</Row>
      <Col>0</Col>
      <Symbol>TabIcon</Symbol>
      <Text>&#9;</Text>
    </DynamicKey>
    <DynamicKey>
      <Row>3</Row>
      <Col>6</Col>
      <Text>g</Text>
      <ShiftUpLabel>g</ShiftUpLabel>
      <ShiftDownLabel>G</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>4</Row>
      <Col>1</Col>
      <Text>&lt;</Text>
      <Label>&lt;</Label>
    </DynamicKey>
    <DynamicKey>
      <Row>4</Row>
      <Col>2</Col>
      <Text>y</Text>
      <ShiftUpLabel>y</ShiftUpLabel>
      <ShiftDownLabel>Y</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>4</Row>
      <Col>3</Col>
      <Text>x</Text>
      <ShiftUpLabel>x</ShiftUpLabel>
      <ShiftDownLabel>X</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>4</Row>
      <Col>4</Col>
      <Text>c</Text>
      <ShiftUpLabel>c</ShiftUpLabel>
      <ShiftDownLabel>C</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>4</Row>
      <Col>5</Col>
      <Text>v</Text>
      <ShiftUpLabel>v</ShiftUpLabel>
      <ShiftDownLabel>V</ShiftDownLabel>
    </DynamicKey>
    <DynamicKey>
      <Row>4</Row>
      <Col>6</Col>
      <Text>b</Text>
      <ShiftUpLabel>b</ShiftUpLabel>
      <ShiftDownLabel>B</ShiftDownLabel>
    </DynamicKey>
  </Content>
</Keyboard>"
`;

exports[`parser: xml to js 1`] = `
Object {
  "Keyboard": Object {
    "BackgroundColor": "Transparent",
    "BorderColor": "Transparent",
    "BorderThickness": "0,0,0,0",
    "Content": Array [
      Object {
        "Col": 7,
        "Label": "7",
        "Row": 0,
        "Text": "7",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 8,
        "Label": "8",
        "Row": 0,
        "Text": "8",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 9,
        "Label": "9",
        "Row": 0,
        "Text": "9",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 0,
        "Label": "\\\\",
        "Row": 1,
        "Text": "\\\\",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 0,
        "Label": "~",
        "Row": 0,
        "Text": "~",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 10,
        "Label": "$",
        "Row": 1,
        "Text": "$",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 6,
        "Label": "&",
        "Row": 1,
        "Text": "&",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 11,
        "Label": "^",
        "Row": 3,
        "Text": "^",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 1,
        "Label": "!",
        "Row": 1,
        "Text": "!",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 2,
        "Label": "?",
        "Row": 1,
        "Text": "?",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 11,
        "Label": "|",
        "Row": 2,
        "Text": "|",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 4,
        "Label": "4",
        "Row": 0,
        "Text": "4",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 5,
        "Label": "5",
        "Row": 0,
        "Text": "5",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 6,
        "Label": "6",
        "Row": 0,
        "Text": "6",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 0,
        "Label": "/",
        "Row": 2,
        "Text": "/",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 3,
        "Label": ":",
        "Row": 6,
        "Text": ":",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 5,
        "Row": 3,
        "ShiftDownLabel": "F",
        "ShiftUpLabel": "f",
        "Text": "f",
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 6,
        "Row": 3,
        "ShiftDownLabel": "G",
        "ShiftUpLabel": "g",
        "Text": "g",
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 7,
        "Row": 3,
        "ShiftDownLabel": "H",
        "ShiftUpLabel": "h",
        "Text": "h",
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 1,
        "Row": 2,
        "ShiftDownLabel": "Q",
        "ShiftUpLabel": "q",
        "Text": "q",
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 8,
        "Row": 3,
        "ShiftDownLabel": "J",
        "ShiftUpLabel": "j",
        "Text": "j",
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 5,
        "Label": "%",
        "Row": 1,
        "Text": "%",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 1,
        "Label": "1",
        "Row": 0,
        "Text": "1",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 2,
        "Label": "2",
        "Row": 0,
        "Text": "2",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 8,
        "Row": 4,
        "ShiftDownLabel": "M",
        "ShiftUpLabel": "m",
        "Text": "m",
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 7,
        "Row": 4,
        "ShiftDownLabel": "N",
        "ShiftUpLabel": "n",
        "Text": "n",
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 10,
        "Row": 2,
        "ShiftDownLabel": "P",
        "ShiftUpLabel": "p",
        "Text": "p",
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 6,
        "Row": 4,
        "ShiftDownLabel": "B",
        "ShiftUpLabel": "b",
        "Text": "b",
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 9,
        "Row": 3,
        "ShiftDownLabel": "K",
        "ShiftUpLabel": "k",
        "Text": "k",
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 5,
        "Row": 4,
        "ShiftDownLabel": "V",
        "ShiftUpLabel": "v",
        "Text": "v",
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 0,
        "Label": "-",
        "Row": 3,
        "Text": "-",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 3,
        "Label": "3",
        "Row": 0,
        "Text": "3",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 1,
        "Label": "_",
        "Row": 3,
        "Text": "_",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 2,
        "Label": ";",
        "Row": 6,
        "Text": ";",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 9,
        "Label": "@",
        "Row": 4,
        "Text": "@",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 7,
        "Label": "\\"",
        "Row": 1,
        "Text": "\\"",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 8,
        "Label": "'",
        "Row": 1,
        "Text": "'",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 11,
        "Label": "#",
        "Row": 4,
        "Text": "#",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 10,
        "Label": "0",
        "Row": 0,
        "Text": "0",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 10,
        "Row": 3,
        "ShiftDownLabel": "L",
        "ShiftUpLabel": "l",
        "Text": "l",
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 3,
        "Row": 3,
        "ShiftDownLabel": "S",
        "ShiftUpLabel": "s",
        "Text": "s",
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 4,
        "Row": 2,
        "ShiftDownLabel": "R",
        "ShiftUpLabel": "r",
        "Text": "r",
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 5,
        "Row": 2,
        "ShiftDownLabel": "T",
        "ShiftUpLabel": "t",
        "Text": "t",
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 4,
        "Row": 4,
        "ShiftDownLabel": "C",
        "ShiftUpLabel": "c",
        "Text": "c",
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 4,
        "Row": 3,
        "ShiftDownLabel": "D",
        "ShiftUpLabel": "d",
        "Text": "d",
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 2,
        "Row": 2,
        "ShiftDownLabel": "W",
        "ShiftUpLabel": "w",
        "Text": "w",
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 3,
        "Label": "+",
        "Row": 1,
        "Text": "+",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 1,
        "Label": "<",
        "Row": 4,
        "Text": "<",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 10,
        "Label": "=",
        "Row": 4,
        "Text": "=",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 2,
        "Row": 3,
        "ShiftDownLabel": "A",
        "ShiftUpLabel": "a",
        "Text": "a",
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 3,
        "Row": 2,
        "ShiftDownLabel": "E",
        "ShiftUpLabel": "e",
        "Text": "e",
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 8,
        "Row": 2,
        "ShiftDownLabel": "I",
        "ShiftUpLabel": "i",
        "Text": "i",
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 9,
        "Row": 2,
        "ShiftDownLabel": "O",
        "ShiftUpLabel": "o",
        "Text": "o",
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 7,
        "Row": 2,
        "ShiftDownLabel": "U",
        "ShiftUpLabel": "u",
        "Text": "u",
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 3,
        "Row": 4,
        "ShiftDownLabel": "X",
        "ShiftUpLabel": "x",
        "Text": "x",
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 2,
        "Row": 4,
        "ShiftDownLabel": "Y",
        "ShiftUpLabel": "y",
        "Text": "y",
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 6,
        "Row": 2,
        "ShiftDownLabel": "Z",
        "ShiftUpLabel": "z",
        "Text": "z",
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 1,
        "Label": ">",
        "Row": 5,
        "Text": ">",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 2,
        "Label": ",",
        "Row": 5,
        "Text": ",",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 3,
        "Label": ".",
        "Row": 5,
        "Text": ".",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 4,
        "Label": "(",
        "Row": 5,
        "Text": "(",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 5,
        "Label": ")",
        "Row": 5,
        "Text": ")",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 6,
        "Label": "[",
        "Row": 5,
        "Text": "[",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 7,
        "Label": "]",
        "Row": 5,
        "Text": "]",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 8,
        "Label": "{",
        "Row": 5,
        "Text": "{",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 9,
        "Label": "}",
        "Row": 5,
        "Text": "}",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 0,
        "Row": 4,
        "Symbol": "TabIcon",
        "Text": "&#9;",
        "labelType": "Symbol",
        "name": "DynamicKey",
      },
      Object {
        "Col": 5,
        "Height": "2",
        "Row": 6,
        "Symbol": "SpaceIcon",
        "Text": "&#32;",
        "Width": "2",
        "labelType": "Symbol",
        "name": "DynamicKey",
      },
      Object {
        "Col": 7,
        "Row": 6,
        "Symbol": "EnterIcon",
        "Text": "&#13;",
        "labelType": "Symbol",
        "name": "DynamicKey",
      },
      Object {
        "Col": 9,
        "Label": "\`",
        "Row": 1,
        "Text": "\`",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Col": 4,
        "Label": "*",
        "Row": 1,
        "Text": "*",
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Action": "MenuKeyboard",
        "Col": 11,
        "Row": 0,
        "Symbol": "MenuIcon",
        "labelType": "Symbol",
        "name": "DynamicKey",
      },
      Object {
        "Action": "BackOne",
        "Col": 8,
        "Row": 6,
        "Symbol": "BackOneIcon",
        "labelType": "Symbol",
        "name": "DynamicKey",
      },
      Object {
        "Action": "LeftWin",
        "Col": 0,
        "Label": "Win",
        "Row": 5,
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Action": "ArrowUp",
        "Col": 10,
        "Row": 5,
        "Symbol": "UpArrowKeyIcon",
        "labelType": "Symbol",
        "name": "DynamicKey",
      },
      Object {
        "Action": "Escape",
        "Col": 11,
        "Label": "Esc",
        "Row": 5,
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Action": "LeftCtrl",
        "Col": 0,
        "Label": "Ctrl",
        "Row": 6,
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Action": "LeftAlt",
        "Col": 1,
        "Label": "Alt",
        "Row": 6,
        "labelType": "Text",
        "name": "DynamicKey",
      },
      Object {
        "Action": "LeftShift",
        "Col": 4,
        "Row": 6,
        "Symbol": "ShiftIcon",
        "labelType": "Symbol",
        "name": "DynamicKey",
      },
      Object {
        "Action": "ArrowLeft",
        "Col": 9,
        "Row": 6,
        "Symbol": "LeftArrowKeyIcon",
        "labelType": "Symbol",
        "name": "DynamicKey",
      },
      Object {
        "Action": "ArrowDown",
        "Col": 10,
        "Row": 6,
        "Symbol": "DownArrowKeyIcon",
        "labelType": "Symbol",
        "name": "DynamicKey",
      },
      Object {
        "Action": "ArrowRight",
        "Col": 11,
        "Row": 6,
        "Symbol": "RightArrowKeyIcon",
        "labelType": "Symbol",
        "name": "DynamicKey",
      },
    ],
    "DockSize": "Full",
    "Grid": Object {
      "Cols": 12,
      "Rows": 7,
    },
    "Height": 40,
    "HorizontalOffset": 0,
    "Name": "OptiKey-BoardMaker",
    "Position": "Top",
    "SymbolMargin": 1,
    "VerticalOffset": 0,
    "Width": 100,
    "WindowState": "Docked",
  },
}
`;
